<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/DialogStyle"
        tools:context=".WarenBearbeiten">
    <TextView
            android:id="@+id/waren_bearbeiten_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/aktivitaet_waren_bearbeiten"/>


    <TextView
            android:id="@+id/waren_bearbeiten_lbl_waren_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_titel"
            android:text="@string/rv_lbl_waren_id"/>
    <TextView
            android:id="@+id/waren_bearbeiten_txt_waren_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/waren_bearbeiten_lbl_waren_id"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_titel"/>
    <TextView
            android:id="@+id/waren_bearbeiten_lbl_waren_alter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/waren_bearbeiten_txt_waren_id"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_titel"
            android:text="@string/waren_bearbeiten_ehemaliger_name"/>
    <TextView
            android:id="@+id/waren_bearbeiten_txt_waren_alter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/waren_bearbeiten_lbl_waren_alter_name"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_titel"/>
    <TextView
            android:id="@+id/waren_bearbeiten_lbl_waren_neuer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_lbl_waren_id"
            android:text="@string/waren_bearbeiten_neuer_name"/>
    <EditText
            android:id="@+id/waren_bearbeiten_edtxt_waren_neuer_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/waren_bearbeiten_lbl_waren_neuer_name"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_lbl_waren_id"/>
    <!-- menge -->

    <Button
            android:id="@+id/waren_bearbeiten_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_edtxt_waren_neuer_name"
            android:text="@string/btn_eingeben"
            android:onClick="waren_bearbeiten_btn_eingeben_Click"/>
    <Button
            android:id="@+id/waren_verarbeiten_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/waren_bearbeiten_edtxt_waren_neuer_name"
            android:text="@string/btn_abbrechen"
            android:onClick="waren_bearbeiten_abbrechen_Click"/>
</android.support.constraint.ConstraintLayout>