<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/DialogStyle"
        tools:context=".LadenBearbeiten">
    <TextView
            android:id="@+id/laden_bearbeiten_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/aktivitaet_laden_bearbeiten"/>


    <TextView
            android:id="@+id/laden_bearbeiten_lbl_laden_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_titel"
            android:text="@string/rv_lbl_laden_id"/>
    <!-- change text view to spinner, allow edit -->
    <TextView
            android:id="@+id/laden_bearbeiten_txt_laden_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/laden_bearbeiten_lbl_laden_id"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_titel"/>
    <TextView
            android:id="@+id/laden_bearbeiten_lbl_laden_alter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/laden_bearbeiten_txt_laden_id"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_titel"
            android:text="@string/laden_bearbeiten_ehemaliger_name"/>
    <TextView
            android:id="@+id/laden_bearbeiten_txt_laden_alter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/laden_bearbeiten_lbl_laden_alter_name"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_titel"/>
    <TextView
            android:id="@+id/laden_bearbeiten_lbl_laden_neuer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_lbl_laden_id"
            android:text="@string/laden_bearbeiten_neuer_name"/>
    <EditText
            android:id="@+id/laden_bearbeiten_edtxt_laden_neuer_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/laden_bearbeiten_lbl_laden_neuer_name"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_lbl_laden_id"
            android:inputType="text"/>
    <Button
            android:id="@+id/laden_bearbeiten_btn_eingeben"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_edtxt_laden_neuer_name"
            android:text="@string/btn_eingeben"
            android:onClick="laden_bearbeiten_btn_eingeben_Click"/>
    <Button
            android:id="@+id/laden_bearbeiten_btn_abbrechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/laden_bearbeiten_edtxt_laden_neuer_name"
            android:text="@string/btn_abbrechen"
            android:onClick="laden_bearbeiten_abbrechen_Click"/>
</android.support.constraint.ConstraintLayout>