<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/DialogStyle"
        tools:context=".LadenHinzufuegen">

    <!--

android:theme="@style/DialogTheme"
android:layout_width="match_parent"
        android:layout_height="match_parent"
    -->

    <TextView
            android:id="@+id/laden_hinzufügen_lbl_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/laden_hinzufuegen"/>

    <TextView
            android:id="@+id/laden_hinzufügen_lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/laden_hinzufügen_lbl_titel"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/name_des_neuen_ladens"/>
    <EditText
            android:id="@+id/laden_hinzufügen_txt_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/laden_hinzufügen_lbl_name"/>
    <Button
            android:id="@+id/laden_hinzufügen_btn_laden_eingeben"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/laden_hinzufügen_txt_name"
            android:text="@string/btn_eingeben"
            android:onClick="btnLadenEingebenClick"/>
    <Button
            android:id="@+id/laden_hinzufügen_btn_laden_hinzufügen_abbrechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/laden_hinzufügen_txt_name"
            android:text="@string/btn_abbrechen"
            android:onClick="btnLadenHinzufuegenAbbrechenClick"/>



</android.support.constraint.ConstraintLayout>